--- a/src/routes/WorkPeriods/components/ProcessingError/styles.module.scss
+++ b/src/routes/WorkPeriods/components/ProcessingError/styles.module.scss
@@ -8,6 +8,7 @@
 .popup {
   max-width: 400px;
   line-height: $line-height-px;
+  white-space: normal;
 }
 
 .icon {
